# art-inference

./: .cursorrules  .gitignore  Cargo.toml  instructions.md  proposal.md  targetapi.md
prompts/: flux.json  sdxl.json
src/: api_server.rs  comfyui_client.rs  config.rs  error.rs  lib.rs  main.rs
src/api/: handlers.rs  routes.rs
src/comfyui/: client.rs
src/prompt/: constructor.rs  mod.rs
src/utils/: mod.rs  static_drive_poller.rs
src/workflow/: manager.rs  mod.rs
tests/: api_tests.rs  comfyui_tests.rs  prompt_tests.rs
